# PyTraj

./: README.md  pyproject.toml
src/pytraj/: __init__.py  data_split.py  functions.py  functions_dask.py  functions_dask_new.py  get_data.py  main.py  process_.py  process_new.py
src/pytraj/data/: northarrow.svg:Zone.Identifier
tests/: test.ipynb
