[project]
name = "pytraj"
version = "0.1.1"
description = ""
authors = [
    {name = "zay1996",email = "aiiyinzhang@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.26,<2.0",
    "pandas>=2.2.3,<3.0",
    "matplotlib>=3.9.2,<4.0",
    "rioxarray>=0.19,<0.20",
    "xarray>=2025.4,<2026",
    "tqdm>=4.67,<5.0",
    "dask>=2025.4.1,<2026",
    "matplotlib-scalebar>=0.9,<0.10"
]

[tool.poetry]
packages = [{include = "pytraj", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
